# nomad

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: build.sh  run.sh  setup.sh
src/: main.cpp
